# dip3e

./: ILPF_on_frequency.py  Microsoft.PowerShell_profile.ps1  NG(4)-Laplacian_FrequencyDomain.py  OK(5)-DegradationEstimating_Modeling.py  OK(5)-Noise_Gaussian.py  OK(5)-Noise_PepperSlot.py  README.md  bandpass_filtering.py  degradation.py  gaussian_noise.py  hist.py  homomorphic_filtering-OK.py  init.el  inverse_filtering.py  noise-OK.py  notch.py  notch_restoration-OK.py  selection_notch_filtering-OK.py  show_fft.py
1/: ccamera.h  mainwindow.cpp  mainwindow.h
2/: mainwindow.cpp  mainwindow.h
DIP3E_Original/: CH04-BL(H)PF_FrequencyDomain.py  CH04-GL(H)PF_FrequencyDomain.py  CH04-HighFrequencyEmphasisFiltering.py  CH04-HomomorphicFiltering_FrequencyDomain.py  CH04-IL(H)PF_FrequencyDomain.py  CH04-SelectionFiltering_Notch.py  CH05-DegradationEstimating_Modeling.py  CH05-Noise_Gaussian.py  CH05-Noise_PepperSlot_SpatialFiltering.py  CH05-NotchRestoration.py  CH09-BorderClearing.py  CH09-FillingHoles.py  CH09-GrayOpenClose.py  CH09-MorphologicalGradient.py  CH09-MorphologicalSmoothing.py  CH09-MorphologicalTopHat_BottomHat.py  CH09-Morphology_Edge.py  CH09-Morphology_ErodeDilate.py  CH09-Morphology_OpenClose.py  CH09-OpeningReconstruction.py  CH09-Recontstruction.py  CH09-TextureSegmentation.py  CH10-BasicEdgeDetection.py  CH10-BasicEdgeDetectionNoise.py  CH10-BasicEdgeDetectionThresh.py  CH10-EdgeDetectionMarr-Hildreth.py  CH10-IsolatedPointsDetect.py  CH10-LineDetection.py  CH10-LineDetectionDirection.py  (+5 more)
opencv_image_processing/: CMakeLists.txt  main.cpp
(+5 files in other folders)
